syntax = "proto3";

package user;

// User Authentication Service
service UserService {
  rpc Signup(SignupRequest) returns (SignupResponse);
  rpc VerifyUser(VerifyUserRequest) returns (VerifyUserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ResendVerificationCode(ResendVerificationRequest) returns (ResendVerificationResponse);
}

// Signup Request & Response
message SignupRequest {
  string email = 1;
  string mobile_number = 2;
  string password = 3;
  string role = 4;  // Optional, defaults to "user"
}

message SignupResponse {
  string message = 1;
  string id = 2;
  
}

message VerifyUserRequest {
  string verification_code = 1;
}

message VerifyUserResponse {
  string message = 1;
  string token = 2;
}

message LoginRequest {
  string email = 1;          // ✅ User can provide email
  string mobile_number = 2;  // ✅ OR mobile number
  string password = 3;
}

message LoginResponse {
  string message = 1;
  string id = 2;
  string token = 3;
}

message ResendVerificationRequest {
  string identifier = 1; // Email or Mobile Number
}

message ResendVerificationResponse {
  bool success = 1;
  string message = 2;
}
